css/style.css
/* ... */
.orange-bage {
  background-color: var(--orange-color);
}
.pink-bage {
  background-color: var(--pink-color);
}
.blue-bage {
  background-color: var(--blue-color);
}
.purpul-bg-bage {
  background-color: var(--purpul-bg-color);
}
.greenn-bg-bage {
  background-color: var(--grean-bg-color);
}
.orange-bg-bage {
  background-color: var(--orange-bg-color);
}
.pink-bg-bage {
  background-color: var(--pink-bg-color);
}
.blue-bg-bage {
  background-color: var(--blue-bg-color);
}
.line-text {
  text-decoration: line-through;
}
.view-all-property {
  background-color: var(--purpul-color);
  padding: 16px 32px;
  border: none;
  border-radius: 12px;
  color: white;
  font-weight: 600;
  transition: all 0.2s;
}
.view-all-property:hover {
  background-color: var(--hover-btn-purpul);
}
/* section services*/
.services {
  padding-block: 90px;
}
.nav-tabs {
  border-radius: 0;
}
.nav-tabs .nav-link {
  color: #4a5565;
  font-weight: 600;
  border: none;
  border-bottom: 2px solid transparent;
  padding: 16px 24px;
  border-radius: 0;
  transition: var(--transition);
  background-color: transparent;
}

.nav-tabs .nav-link:hover {
  color: var(--purpul-color);
  border-color: transparent;
  border-bottom: 2px solid #dbd4fc;
}
.nav-tabs .nav-link.active {
  color: var(--purpul-color) !important;
  background-color: var(--purpul-bg-color);
  border-bottom: 2px solid var(--purpul-color);
}
.custom-tabs .nav-link i {
  font-size: 16px;
}
.purpul-text {
  color: var(--purpul-color);
}
.green-text {
  color: var(--grean-color);
}
.blue-text {
  color: var(--blue-color);
}
.orange-text {
  color: var(--orange-color);
}
.pink-text {
  color: var(--pink-color);
}

.text-secondary {
  color: var(--text-gray) !important;
}
.card-taps-icon {
  width: 40px;
  height: 45px;
  font-size: 17px;
}
.taps-btn,
.taps-btn-green,
.taps-btn-pink,
.taps-btn-orange,
.taps-btn-blue {
  transition: all 0.2s;
}
.taps-btn:hover {
  background-color: var(--hover-btn-purpul);
}
.taps-btn-green:hover {
  background-color: var(--hover-btn-green);
}
.taps-btn-pink:hover {
  background-color: var(--hover-btn-pink);
}
.taps-btn-orange:hover {
  background-color: var(--hover-btn-orange);
}
.taps-btn-blue:hover {
  background-color: var(--hover-btn-blue);
}
.pra3 {
  color: #4a5565 !important
  
;
}
.img-taps-badge-purpul,
.img-taps-badge-pink,
.img-taps-badge-blue {
  bottom: -20px;
  left: -20px;
  border-radius: 12px;
  z-index: 100;
}
.img-taps-badge-green,
.img-taps-badge-orange {
  bottom: -20px;
  right: -20px;
  border-radius: 12px;
  z-index: 100;
}

.img-taps img {
  aspect-ratio: 3/2;
}

/* testimonials section*/
.testimonials {
  padding-block: 90px;
  background: linear-gradient(
    90deg,
    #4e1698 0%,
    #521794 30%,
    #55168f 70%,
    #59178c 100%
  );
}
.title-line-left2 {
  width: 70px;
  height: 2px;
  background: linear-gradient(90deg, #ffa500, #a63af6, transparent);
}
.title-line-right2 {
  width: 70px;
  height: 2px;
  background: linear-gradient(90deg, transparent, #ffa500);
}
.cursl {
  width: 99%;
  padding: 35px;
}
.cursl-footer-info p {
  color: #6a7282;
}
.carousel-inner {
  width: 75% !important;
}
.left-switch,
.rigt-switch {
  width: 50px;
  height: 50px;
  background-color: #835cb7;
  border-radius: 50%;
}
.carousel-indicators {
  bottom: -80px;
}
.carousel-indicators [data-bs-target] {
  width: 10px;
  height: 10px;
  border-radius: 50%;
}

/* FAQ section*/
.faq {
  padding-block: 90px;
  background-color: #f9fafb;
}
.title-line-left3 {
  width: 70px;
  height: 2px;
  background: linear-gradient(90deg, #7f22fe, transparent);
}
.title-line-right3 {
  width: 70px;
  height: 2px;
  background: linear-gradient(90deg, transparent, #7f22fe);
}
.according {
  width: 70%;
}
.accordion-button {
  padding-inline: 32px !important;
  border-radius: 12px !important;
  transition: var(--text-gray);
}
.accordion-button:hover {
  background-color: #f9fafb !important;
}
.accordion-item {
  border-radius: 12px !important;
  overflow: hidden;
  border: none !important;
}
.accordion-button:not(.collapsed) {
  background-color: #fff !important;
  box-shadow: none !important;
  border: none !important;
  transition: var(--text-gray);
}
.accordion-button:not(.collapsed):hover {
  background-color: #f9fafb !important;
}
.accordion-button:focus {
  box-shadow: none;
}
/* contact*/

.contact {
  padding-block: 90px;
  overflow: hidden;
  position: relative;
  background-color: #fff;
}
.contact-cricle1 {
  position: absolute;
  top: -80px;
  right: -120px;
  width: 300px;
  height: 300px;
  background-color: #f6f4ff;
  border-radius: 50%;
  z-index: 2;
}
.inner-cricle1 {
  position: absolute;
  top: 20%;
  right: 4%;
  width: 130px;
  height: 130px;
  border: 5px solid #ddd6ff;
  background: transparent;
  border-radius: 50%;
  z-index: 5;
}
.contact-cricle2 {
  position: absolute;
  bottom: -80px;
  left: -120px;
  width: 300px;
  height: 300px;
  background-color: #F9F4FF;
  border-radius: 50%;
  z-index: 2;
}
.inner-cricle2 {
  position: absolute;
  bottom: 30%;
  left: 6%;
  width: 100px;
  height: 100px;
  border: 5px solid #e9d4ff;
  background: transparent;
  border-radius: 50%;
  z-index: 5;
}

